core/src/ast/snapshots/span_testing/diplomat_core__ast__logging__tests__flush@attr_on_non_pub.rs_ugly.snap
---
source: core/src/ast/logging.rs
expression: self.buf
---
Diplomat error: Found non-public method with diplomat attrs
In src/ast/snapshots/span_testing/attr_on_non_pub.rs:7:12:
...fn hidden_fn() {}...
      ^^^^^^^^^
Remove #[diplomat::*] attributes.
